--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
         <link rel="stylesheet" href="dist/main.css">
     </head>
     <body>
-       <div class="wrapper">
+        <div class="hero-img"></div>
+        <div class="wrapper">
+            <header>
+                <a href="#"class="logo">Shoe<span>Brand</span></a>
 
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Sneakers</a></li>
+                        <li><a href="#">Players</a></li>
+                    </ul>
+
+                    <svg class="close" viewBox="0 0 48 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M24 32H0V26.6667H24V32ZM48 18.6667H0V13.3333H48V18.6667ZM48 5.33333H24V0H48V5.33333Z" fill="white"/>
+                    </svg>
+                         
+                </nav>
+            </header>
        </div>
     </body>
 </html>
