Finished CSS for Mobile. Added Media Break Points.
Completed all of the CSS needed for mobile which included 2 break points at 960px and a 1200px wrapper. Last sections of the video have to do with animation and JavaScript for the mobile menu buttom.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="hero-img"></div>
         <div class="wrapper">
             <header>
-                <a href="#"class="logo">Shoe<span>Brand</span></a>
+                <a href="#" class="logo">Shoe<span>Brand</span></a>
 
                 <nav>
                     <svg class="close" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -27,9 +27,11 @@
                         <li><a href="#">Players</a></li>
                     </ul>
                 </nav>
-                <svg class="close" viewBox="0 0 48 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+
+                <svg class="menu" viewBox="0 0 48 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M24 32H0V26.6667H24V32ZM48 18.6667H0V13.3333H48V18.6667ZM48 5.33333H24V0H48V5.33333Z" fill="white"/>
                 </svg>  
+
             </header>
 
             <section class="hero">
@@ -46,21 +48,21 @@
                 <div class="feature">
                     <div class="content">
                         <p class="title">Lightweight</p>
-                        <p class="title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque ducimus atque amet error dolorum aperiam.</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque ducimus atque amet error dolorum aperiam.</p>
                     </div>
                     <img src="images/shoe_yellow.jpg" alt="Another Shoe">
                 </div>
                 <div class="feature left">
                     <div class="content">
                         <p class="title">Affordable</p>
-                        <p class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur repudiandae recusandae qui quibusdam dolor, ab deserunt?</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur repudiandae recusandae qui quibusdam dolor, ab deserunt?</p>
                     </div>
                     <img src="images/shoe_white.jpg" alt="Another Shoe">
                 </div>
                 <div class="feature">
                     <div class="content">
                         <p class="title">Playable</p>
-                        <p class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa accusamus delectus labore autem, quibusdam illum ipsum alias. Ab error quis provident rerum dolorem?</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa accusamus delectus labore autem, quibusdam illum ipsum alias. Ab error quis provident rerum dolorem?</p>
                     </div>
                     <img src="images/shoe_brown.jpg" alt="Another Shoe">
                 </div>
